# TheKinect

./: .gitignore  CMakeLists.txt  README.md  TheKinect.cpp
